--- a/Application.Infrastructure/Application.Infrastructure.csproj
+++ b/Application.Infrastructure/Application.Infrastructure.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Application.Service\Application.Service.csproj" />
+    <ProjectReference Include="..\Domain.Service\Domain.Service.csproj" />
+    <ProjectReference Include="..\Infrastructure\Domain.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
