--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Application.Infrastructure\Application.Infrastructure.csproj" />
     <ProjectReference Include="..\Infrastructure\Domain.Infrastructure.csproj" />
   </ItemGroup>
 
