--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="serilog.aspnetcore" Version="6.0.1" />
+    <PackageReference Include="serilog.expressions" Version="3.4.0" />
+    <PackageReference Include="serilog.sinks.seq" Version="5.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
