--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-0N88TA5;Database=Task04;Trusted_Connection=True;"
+  },
   "AppSettings": {
     "Token": "My top secret key"
   },
